--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   "engines": {
     "node": ">=18.18.0"
   },
-  "packageManager": "yarn@4.6.0",
+  "packageManager": "npm@10.9.0",
   "workspaces": [
     "apps/*",
     "packages/*"
